结合小林完善计网，小林没有的没管

--- a/计算机网络/子网掩码与广播地址.md
+++ b/计算机网络/子网掩码与广播地址.md
@@ -2,11 +2,11 @@
 
 ## 一、子网掩码
 
-作用：划分子网，将某个IP地址划分成网络地址和主机地址两部分
+作用：**划分子网，将某个IP地址划分成网络号和主机号两部分**
 
 ## 二、广播地址
 
-主机标识段为全1的IP地址为广播地址
+**主机标识段为全1的IP地址为广播地址**
 
 给定IP = 10.123.6.11，子网掩码 = 255.255.252.0，求广播地址
 
