--- a/计算机网络/网络分层模型.md
+++ b/计算机网络/网络分层模型.md
@@ -4,7 +4,7 @@
 
 ### 1、应用层
 
-包含用户需要的各种协议，定义了信息交换的格式，如**HTTP（超文本传输）、SMTP（邮件传输）、FTP（文件传输）、DNS（域名解析）**
+专注于为用户提供应用功能，屏蔽数据传输的细节，如**HTTP（超文本传输）、SMTP（邮件传输）、FTP（文件传输）、DNS（域名解析）**
 
 ### 2、表示层
 
@@ -22,23 +22,23 @@
 
 ### 5、网络层
 
-1、**路由选择**：将数据包从源机器路由到目标机器，数据包往往需要多跳才能到达目的地
+1、**网络互联**：网络有很多分类，比如个域网、局域网、广域网、IPv4/6等，网络层可以通过隧道等方式跨过不同类型的网络
 
-2、**拥塞控制**：网络中存在太多数据包导致数据包被延迟或丢失，从而降低了传输性能，这种情况称为拥塞。显式拥塞通知通过回传抑制包来显式通知源机器降低发送速率；隐式拥塞通知通过丢包的方式隐式通知源机器降低发送速率
+2、**路由选择**：将数据包从源机器路由到目标机器，数据包往往需要多跳才能到达目的地
 
-3、**流量整形**：通过漏桶、令牌桶等算法将突发流量进行平均，以提高服务质量，类似于流量控制
+3、**拥塞控制**：网络中存在太多数据包导致数据包被延迟或丢失，从而降低了传输性能，这种情况称为拥塞。显式拥塞通知通过回传抑制包来显式通知源机器降低发送速率；隐式拥塞通知通过丢包的方式隐式通知源机器降低发送速率
 
-4、**网络互联**：网络有很多分类，比如个域网、局域网、广域网、IPv4/6等，网络层可以通过隧道等方式跨过不同类型的网络
+4、**流量整形**：通过漏桶、令牌桶等算法将突发流量进行平均，以提高服务质量，类似于流量控制
 
-5、**常见协议**：IP、ICMP（互联网控制消息协议，当IP包未成功传输时，会通过ICMP传递失败原因）、ARP（地址解析协议，维护一张ARP表，用于存储IP地址和MAC地址的映射关系）
+5、**常见协议**：IP、ICMP（互联网控制消息协议，当IP包未成功传输时，会通过ICMP传递失败原因；ping的底层协议）、ARP（地址解析协议，维护一张ARP表，用于存储IP地址和MAC地址的映射关系）
 
 ### 6、数据链路层
 
 1、**将数据封装成帧**：数据链路层将连续的比特流拆分为多个帧，每个帧的结构包括：帧头、负载、帧尾。帧头帧尾主要用于标识一个帧的开始和结束，并且提供差错校验功能。在发现有数据传送错误时，只需将有差错的帧再次传送，而不需要将全部数据的比特流进行重传，这就在传送效率上将大大提高
 
-2、**差错控制**：为了确保每一帧都被接收方收到，并保持正确的顺序，可以通过超时重传+帧序号的方式解决，若接收方收到重复帧，可以直接将该帧丢弃。差错控制又可分为差错检验与纠正，检验可通过汉明码，纠正可通过CRC（循环冗余校验）等
+2、**进行局域网内的数据交换**：通过ARP协议确定局域网（即以太网）中的发送方和接收方
 
-3、**流量控制**：如果数据的接收速率超过处理速率，往往会导致部分帧的丢失。主要的流量控制方式有基于反馈的流量控制：接收方告诉发送方可以发送的帧数；基于速率的流量控制：限制发送方的发送速率
+3、**差错控制**：为了确保每一帧都被接收方收到，并保持正确的顺序，可以通过超时重传+帧序号的方式解决，若接收方收到重复帧，可以直接将该帧丢弃。差错控制又可分为差错检验与纠正，检验可通过汉明码，纠正可通过CRC（循环冗余校验）等
 
 ### 7、物理层
 
@@ -68,9 +68,11 @@
 
 ## 四、流量控制与拥塞控制的区别
 
-**流量控制**：主要考虑的是**各端之间**的发送、接收处理能力。通过滑动窗口控制，Nagle算法避免发送方发送小包，Clark算法避免接收方发送只有一个字节的窗口更新段
+**流量控制**：由接收方主导，通过发送接收窗口向发送方反馈接受能力，防止接收方缓冲区溢出，主要考虑的是各端之间的发送、接收处理能力。通过滑动窗口控制，Nagle算法避免发送方发送小包（积累足够的数据后再一起发送），Clark算法解决接收方通告小接收窗口导致发送方发送小数据包的问题（等到缓冲区足够大时才反馈接收窗口）
 
-**拥塞控制**：是一个**全局性**的过程，涉及到所有的主机、路由器，以及与降低网络传输性能有关的所有因素。用慢启动+AIMD（加性增，乘性减）机制维护拥塞窗口
+**拥塞控制**：由发送方主导，通过主动探测丢包情况并调整拥塞窗口，降低网络的负载，是一个全局性的过程，涉及到所有的主机、路由器，以及与降低网络传输性能有关的所有因素。用慢启动+AIMD（加性增，乘性减）+快重传（3个重复ACK）等机制维护拥塞窗口
+
+**发送窗口 = min(接收窗口, 拥塞窗口)**
 
 ## 五、模型分层的优缺点
 
