--- a/计算机网络/断点续传、秒传.md
+++ b/计算机网络/断点续传、秒传.md
@@ -8,7 +8,9 @@
 
 ### 2、实现
 
-利用HTTP1.1协议在 Header 里添加两个参数来实现。这两个参数分别是客户端请求时发送的 Range 和服务器返回信息时返回的 Content-Range
+利用HTTP1.1协议在 Header 里添加两个参数来实现
+
+这两个参数分别是客户端请求时发送的 Range 和服务器返回信息时返回的 Content-Range
 
 ### 3、如何保证文件没有被修改
 
