--- a/计算机网络/键入网址到网页显示的过程.md
+++ b/计算机网络/键入网址到网页显示的过程.md
@@ -2,11 +2,13 @@
 
 ## 一、键入网址到网页显示的过程
 
-### 1、解析URL
+### 1、应用层
+
+#### 1.1、浏览器解析URL
 
 URL分为三部分：**协议**(http/https)，主机**域名**(www.baidu.com)，**路径名**(index.html)
 
-### 2、解析域名获取服务器IP
+#### 1.2、DNS解析域名获取服务器IP
 
 即通过DNS请求获取域名对应的IP
 
@@ -22,25 +24,29 @@ URL分为三部分：**协议**(http/https)，主机**域名**(www.baidu.com)，
 
 - **权威域名服务器**：解析并返回给本地DNS服务器
 
-### 3、浏览器与服务器建立TCP连接
+### 2、传输层
 
-因为HTTP一般是基于TCP协议的，所以要先进行TCP的三次握手
+1、**建立连接**：因为HTTP一般是基于TCP协议的，所以要先进行TCP的三次握手建立浏览器与服务器的连接
 
-在传输数据包时
+2、**分割数据**：根据MSS的限制，将数据分割成多个部分
 
-网络层通过路由器识别IP地址进行路由选择
+3、**生成报文**：将源/目的端口号等信息加入TCP头部，结合TCP数据生成TCP报文
 
-数据链路层通过交换机识别MAC地址进行局域网内的数据交换
+### 3、网络层
 
-传输层根据端口号确定建立通信的应用
+通过路由器识别IP地址进行路由选择
 
-### 4、请求与响应
+### 4、链路层
 
-### 5、浏览器渲染网页
+通过交换机识别MAC地址进行局域网内的数据交换，这里需要先通过ARP获取下一条的MAC地址
 
-### 6、释放TCP连接
+### 5、物理层
 
-最后通信完毕，双方通过四次挥手来释放TCP连接
+通过网线等物理介质进行数据传输
+
+### 6、收尾工作
+
+浏览器收到服务器的响应后渲染网页，四次挥手释放TCP连接
 
 ## 二、如果网页没有显示，如何去排查问题
 
