--- a/操作系统/堆栈的区别.md
+++ b/操作系统/堆栈的区别.md
@@ -1,25 +1,25 @@
 # 堆栈的区别
 
-## 管理方式：
-
-栈：分配释放工作由编译器自动管理，使用完自动释放
+## 1. 管理方式
 
 堆：分配释放工作由程序员控制，容易造成内存泄露
 
-## 空间结构：
+栈：分配释放工作由编译器自动管理，使用完自动释放
 
-栈：栈结构，连续地址
+## 2. 空间结构
 
 堆：链表结构，非连续地址，空间受限于虚拟内存大小，比栈大
 
-## 分配效率：
+栈：栈结构，连续地址
 
-栈：系统自动分配，快
+## 3. 分配效率
 
 堆：通过C的库函数分配，慢
 
-## 线程独有/共享
+栈：系统自动分配，快
 
-栈：线程独有
+## 4. 线程独有/共享
 
 堆：线程共享
+
+栈：线程独有
