--- a/操作系统/死锁与同步.md
+++ b/操作系统/死锁与同步.md
@@ -123,12 +123,12 @@
 
 <img src="https://raw.githubusercontent.com/KKKLxxx/img-host/master/202111111617714.png" alt="image-20211111161731680" style="zoom:80%;" />
 
-每个互斥锁有一个布尔变量available，它表示锁是否可用。如果锁是可用的，那么调用acquire()会成功，并且锁不再可用。当一个进程试图获取不可用的锁时，会被阻塞，直到锁被释放。acquire()与release()的定义如下
+每个互斥锁有一个布尔变量available，它表示锁是否可用。如果锁是可用的，那么调用acquire()会成功，并且锁不再可用。当一个进程试图获取不可用的锁时，**会被阻塞**（线程休眠，而非忙等待），直到锁被释放时被唤醒。acquire()与release()的定义如下
 
 ```c
 acquire() {
     while (!available) {
-    	/* busy wait */
+    	/* 阻塞 */
     }
     available = false;
 }
@@ -142,7 +142,55 @@ release() {
 
 ##### 2、自旋锁
 
+互斥锁加锁失败后，线程会**释放CPU**，给其他线程
+
+自旋锁加锁失败后，线程会**忙等待**，直到它拿到锁
+
 ##### 3、读写锁
+
+适合读多写少的场景，减少了读操作加解锁的开销
+
+具体实现：
+
+```java
+int readCount = 0;
+Mutex countMutex;
+Mutex writeMutex;
+
+readLock() {
+    // readCount是共享变量，所以需要实现一个锁来控制读写
+    countMutex.lock();
+    // 只有是第一个读者，才将写锁加锁。其他的读者都是进行下一步
+    if (readCount == 0) {
+        writeMutex.lock();
+    }
+    ++readCount;
+    countMutex.unlock();
+}
+
+readUnLock() {
+    countMutex.lock();
+    --readCount;
+    if (readCount == 0) {
+        writeMutex.unlock()
+    }
+    countMutex.unlock();
+}
+
+writeLock() {
+    writeMutex.lock();
+}
+
+writeUnLock() {
+    writeMutex.unlock();
+}
+```
+
+##### 4、乐观锁与悲观锁
+
+乐观锁：用于冲突概率低的场景。先修改共享资源，再验证这段时间内有没有发生冲突，如果没有其他线程修改资源，那么操作完成；如果发现有其他线程已经修改过这个资源，就放弃本次操作
+
+悲观锁：用于冲突概率高的场景。访问共享资源前，统一先上锁。互斥锁、自旋锁、读写锁都属于悲观锁
 
 #### 2、信号量（Semaphore）
 
@@ -179,11 +227,13 @@ signal(S) {
 
 即生产者-消费者问题。信号量mutex提供缓冲区访问的互斥要求，信号量empty和full分别被用于表示空的和满的缓冲区的数量
 
-#### 2、读者-作者问题（Reader Writer Problem）
+#### 2、读者-写者问题（Reader Writer Problem）
 
-**第一读者-作者问题**：读者不应保持等待，除非作者已获得权限使用共享对象。会造成**作者饥饿**
+**第一读者-写者问题**：读者不应保持等待，除非写者已获得权限使用共享对象。会造成**写者饥饿**
 
-**第二读者-作者问题**：如果有作者在等待访问对象，那么不会有新的读者开始读。会造成**读者饥饿**
+**第二读者-写者问题**：如果有写者在等待访问对象，那么不会有新的读者开始读。会造成**读者饥饿**
+
+**解决方案**：使读写请求进入同一个等待队列，当有写请求时，使之后的写请求等待，从而禁止插队，防止写者饥饿。当写请求结束后，唤醒队列中的读请求
 
 #### 3、哲学家就餐问题
 
