--- a/系统设计/一致性哈希.md
+++ b/系统设计/一致性哈希.md
@@ -72,13 +72,15 @@
 
 ### 6、虚拟节点
 
-到这里一致性哈希的基本原理已经介绍完了，但对于新增服务器的情况还存在一些问题。新增的服务器 cs4 只分担了 cs1 服务器的负载，服务器 cs2 和 cs3 并没有因为 cs4 服务器的加入而减少负载压力。如果 cs4 服务器的性能与原有服务器的性能一致甚至可能更高，那么这种结果并不是我们所期望的
+到这里一致性哈希的基本原理已经介绍完了，但如果哈希函数的分布不均匀，仍有可能造成某个节点压力过大的问题
 
 **针对这个问题，我们可以通过引入虚拟节点来解决负载不均衡的问题。即将每台物理服务器虚拟为一组虚拟服务器，将虚拟服务器放置到哈希环上，如果要确定对象的服务器，需先确定对象的虚拟服务器，再由虚拟服务器确定物理服务器**
 
 ![ch-virtual-nodes.jpg](https://raw.githubusercontent.com/KKKLxxx/img-host/master/bVbA7aK)
 
 图中 o1 和 o2 表示对象，v1 ~ v6 表示虚拟服务器，s1 ~ s3 表示物理服务器
+
+同时，可以根据物理节点的性能，设置不同的虚拟节点的数量，使系统更灵活，稳定性更高
 
 ## 四、一致性哈希算法实现
 
