--- a/Redis/缓存穿透、缓存击穿、缓存雪崩.md
+++ b/Redis/缓存穿透、缓存击穿、缓存雪崩.md
@@ -2,11 +2,11 @@
 
 ## 一、缓存穿透
 
-高并发访问一个并不存在的key，由于不可能缓存命中，导致每次都会访问数据库，从而导致数据库崩溃
+高并发访问并不存在的key，由于不可能缓存命中，导致每次都会访问数据库，从而导致数据库崩溃
 
 **解决方案**：
 
-布隆过滤器：若想判断一个key是否存在可将其放在一个Map中，然而如果使用HashMap会导致空间占用太大。布隆过滤器通过x个hash函数计算出应置1的x位，对于不存在的值直接拒绝查找。**有一定的误判率**
+- 布隆过滤器：（HashMap空间占用太大）布隆过滤器维护一个二进制数组，通过n个hash函数对key计算n个哈希值，并对数组长度取模，得到应置1的位置，对于不存在的值直接拒绝查找。有一定的误判率，只会将不存在的误判为存在，而不会反过来
 
 ## 二、缓存击穿
 
@@ -16,7 +16,9 @@
 
 **解决方案**：
 
-通过互斥锁，将“查询缓存失败->查询数据库->更新缓存”这段代码互斥执行。保证当缓存失效后，只有一个线程访问数据库，而其他线程因为无法获取锁而阻塞
+- 热点key不要设置过期时间
+
+- 通过互斥锁来保证只有一个请求访问数据库并更新缓存（要设置过期时间，防止长时间不释放），其他请求阻塞或返回空值
 
 ## 三、缓存雪崩
 
@@ -24,6 +26,13 @@
 
 **解决方案**：
 
-1、通过建立集群确保缓存服务高可用
+应对缓存服务宕机问题：
 
-2、将过期时间尽量分散
+- 通过建立集群确保缓存服务高可用
+- 通过熔断或者限流机制，防止数据库访问量过大
+
+应对大量缓存同时失效问题：
+
+- 通过随机数将过期时间尽量分散
+- 互斥锁
+
