--- a/Java基础/如何实现深拷贝.md
+++ b/Java基础/如何实现深拷贝.md
@@ -4,19 +4,21 @@
 
 这个区别发生在对象的拷贝过程，而不是基本类型
 
-浅拷贝只拷贝了对象的地址，原对象和拷贝对象引用的实际是相同的对象
+- 浅拷贝只拷贝了对象的引用，原对象和拷贝对象引用的是相同的对象
 
-深拷贝将对象的值进行了复制，原对象和拷贝对象引用的是不同的对象
+- 深拷贝将对象的值进行了复制，原对象和拷贝对象引用的是不同的对象
 
 ## 二、实现方法
 
-### 1、重写构造函数
+### 1. 手写deepcopy()方法
 
-在构造函数中，对基本类型直接复制，对引用类型调用new
+适用于对象结构复杂度不高的情况
 
-### 2、重写clone()方法
+### 2. 实现Cloneable接口并重写clone()方法
 
-clone()方法由Object类提供，它可以对对象实现浅拷贝，可以通过重写来实现深拷贝。要重写clone()方法，还需要实现Cloneable接口，告诉JVM这个这个类是允许被拷贝的
+clone()方法由Object类提供，它可以对对象实现浅拷贝，可以通过重写来实现深拷贝
+
+要求该对象及其字段中的所有引用类型都要重写clone()方法，还需要实现Cloneable接口，告诉JVM这个这个类是允许被拷贝的
 
 ```java
 public class Main {
@@ -56,15 +58,21 @@ class Son implements Cloneable {
 
 输出结果为false
 
-### 3、序列化与反序列化
+### 3. 序列化与反序列化
 
-可以先将原对象序列化，然后再反序列化至拷贝对象。需要引入三方工具
+可以先将原对象序列化，然后再反序列化至拷贝对象
+
+要求该对象及其字段中的所有引用类型都要实现Serializable接口
+
+- **Java原生序列化**：需要加入大量类信息，体积占用大，且不支持跨语言
+- **JSON**：以文本格式存储信息，体积和性能比较中等，支持跨语言
+- **Protobuf**：以二进制存储信息，体积小，性能高，支持跨语言
 
 ## 三、总结
 
-| 方法             | 优点     | 缺点                                     |
-| ---------------- | -------- | ---------------------------------------- |
-| 构造函数         | 开销小   | 扩展性低，新增字段需要修改               |
-| 重写clone()方法  | 开销小   | 扩展性低，新增字段需要修改               |
-| 序列化与反序列化 | 扩展性强 | 开销大，序列化与反序列化存在一定系统开销 |
+| 方法               | 优点     | 缺点                                     |
+| ------------------ | -------- | ---------------------------------------- |
+| 手写deepcopy()方法 | 开销小   | 扩展性低，新增字段需要修改               |
+| 重写clone()方法    | 开销小   | 扩展性低，新增字段需要修改               |
+| 序列化与反序列化   | 扩展性强 | 开销大，序列化与反序列化存在一定系统开销 |
 
