--- a/Java基础/面向对象三大特性.md
+++ b/Java基础/面向对象三大特性.md
@@ -1,28 +1,135 @@
 # 面向对象三大特性
 
-## 一、封装
+面向对象编程的设计思想是以对象为中心，**通过对象之间的交互来完成功能**，灵活性高、可扩展性强
 
-**概念**：隐藏对象的属性和实现细节，仅对外公开接口
+而面向过程是将问题拆解为函数调用流程，性能高
 
-**好处**：
+## 一、三大特性
 
-1、可以在不改变接口功能的情况下修改接口的实现
-
-2、限制了对私有成员的直接访问，保障了安全
-
-## 二、继承
+### 1. 继承
 
 **概念**：继承可以使得子类具有父类的属性和方法，并且可以重新定义、追加属性和方法
 
 **好处**：提高了代码的复用性
 
-## 三、多态
+### 2. 封装
+
+**概念**：隐藏对象的属性和实现细节，仅对外公开接口
+
+**好处**：
+
+1、限制了对私有成员的直接访问，保障了安全
+
+2、可以在不改变接口功能的情况下修改接口的实现
+
+### 3. 多态
 
 **概念**：一个对象具有多种状态，具体表现为父类的引用指向子类的实例，根据不同的实例类型，调用不同的方法
 
-**静态多态**：编译器在编译期间完成，编译器根据函数实参的类型推断出要调用哪个函数。如模板
-
-**动态多态**：程序在运行期间根据所引用对象的实际类型调用相应的方法。如C++中的虚函数，Java中默认为动态绑定
-
 **好处**：调用时不用在意对象的实际类型，简化代码
 
+**实现方法**：
+
+- **重载与重写**
+- **抽象类与接口**
+- **父类引用指向子类对象**：这样在调用`parent.method()`时，会根据`parent`所指对象的实际类型调用不同方法
+
+## 二、重载与重写
+
+### 1. 重载
+
+**同一个类**中，多个同名方法根据不同的传参来执行不同的逻辑处理
+
+### 2. 重写
+
+在继承关系中，**子类**重新定义一个与父类方法签名完全相同的方法
+
+**什么时候不能重写**：
+
+父类中的函数被以下关键字修饰
+
+1、final
+
+2、static
+
+3、private：因为子类不可见
+
+### 3. 对比
+
+| 区别点     | 重载     | 重写                                                         |
+| ---------- | -------- | ------------------------------------------------------------ |
+| 发生范围   | 同一个类 | 子类                                                         |
+| 参数列表   | 必须修改 | 一定不能修改                                                 |
+| 返回类型   | 可修改   | 子类方法返回值类型应比父类方法返回值类型更小或相等           |
+| 异常       | 可修改   | 子类方法声明抛出的异常类应比父类方法声明抛出的异常类更小或相等 |
+| 访问修饰符 | 可修改   | 一定不能做更严格的限制（可以降低限制）                       |
+| 发生阶段   | 编译期   | 运行期                                                       |
+
+## 三、抽象类与接口
+
+### 1. 抽象类
+
+**概念**：如果一个类定义了一个`abstract`方法，这个类就成为了抽象类，无法实例化，这个类也需要用`abstract`修饰
+
+**作用**：抽象类本身被设计成只能用于被继承，因此，抽象类可以强迫子类实现其定义的抽象方法，否则编译会报错。抽象方法实际上相当于定义了“规范”
+
+### 2. 接口
+
+所有字段默认且**只能**为`public static final`的，不能被修改且必须有初始值
+
+所有方法默认为`public abstract`的，必须在调用类中通过`implements`实现接口中的所有非`default`方法
+
+对于用`default`修饰的方法，可以在接口中实现一个默认方法，则调用类中不强制要求实现（重写）该方法
+
+对于用`static`修饰的方法，必须在接口中实现该方法，且禁止重写
+
+**作用**：
+
+1、规范命名：先定义接口由不同开发人员实现，可以防止命名不规范
+
+2、增强扩展性：由于Java单继承的限制，一个类可实现多个接口的特性增强了扩展性
+
+### 3. 对比
+
+- 相同点
+  - 抽象类和接口都可以用于定义一些公共的字段和方法让子类使用，并定义抽象方法让子类实现
+
+- 不同点
+  - 使用方法：抽象类通过`extends`继承，接口通过`implements`实现
+  - 一个类只能继承一个抽象类，但可以实现多个接口
+  - 抽象类可以有任意类型的变量，而接口只能有公共的静态常量（`public static final`）
+  - 设计目的：抽象类更适合用于定义公共方法以增加代码复用性，接口更适合用于定义一套实现类需要实现的接口规范
+
+## 四、final与static的作用
+
+### 1. final
+
+- 修饰**类**：表示这个类不能被继承，防止其他类通过继承来改变该类的行为和特性（如String）
+- 修饰**方法**：表示该方法不能在子类中被重写
+- 修饰**变量**：表示该变量一旦被赋值就不能再改变，对于引用类型，则表示**引用所指的对象不能改变，但仍能改变原对象的属性**
+
+### 2. static
+
+- 修饰**方法**：静态方法属于类，不属于任何实例，因此不能直接访问类中的非静态成员（变量 / 方法）。（解释：非静态变量的初始化是随着对象的初始化进行的，而static方法在类加载的时候就初始化了，所以static方法无法访问非静态变量）。可以通过`类名.方法名`直接调用，无需创建对象
+
+- 修饰**变量**：静态变量属于类，不属于任何实例。可以通过`类名.变量名`直接访问，无需创建对象（也可通过对象访问，但不推荐）
+
+- 修饰**代码块**：静态代码块在类加载时执行，且只执行一次（优于对象构造方法），用于初始化静态变量或执行类级别的预处理操作
+
+  ```java
+  public class Database {
+      private static String url;
+      
+      // 静态代码块：初始化静态变量
+      static {
+          url = "jdbc:mysql://localhost:3306/test";
+          System.out.println("数据库连接地址初始化完成");
+      }
+  }
+  ```
+
+- 修饰**内部类**
+
+## 五、
+
+## 六、
